[+] Updated to 1.6.2 - Fixed some bugs

--- a/linkcreator.conf
+++ b/linkcreator.conf
@@ -1,6 +1,6 @@
 #LinkCreatorConfig
-#Wed Mar 08 04:05:46 CET 2017
-version=1.5.2
+#Tue Mar 28 14:45:41 CEST 2017
 sendstatistic=0
+version=1.6.1-WIN
 createcachefile=0
-newversion=0
+newversion=1
