--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="lib"/>
 	<classpathentry excluding="**" kind="src" output="target/classes" path="updater">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -26,5 +27,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/license.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
