--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.xearox.creator</groupId>
 	<artifactId>linkcreator</artifactId>
-	<version>1.5.1</version>
+	<version>1.6.1</version>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
@@ -50,7 +50,7 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!-- ><plugin>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
 					<execution>
@@ -61,7 +61,7 @@
 						</goals>
 						<configuration>
 							<artifactItems>
-								<!-- -->
+								
 								<artifactItem>
 									<groupId>de.xearox.creator</groupId>
 									<artifactId>linkcreator</artifactId>
@@ -73,6 +73,30 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>-->
+			<plugin>
+		        <artifactId>maven-jar-plugin</artifactId>
+		        <configuration>
+		          <archive>
+		            <manifest>
+		              <addClasspath>true</addClasspath>
+			          <mainClass>de.xearox.creator.LinkCreator</mainClass>
+		            </manifest>
+		          </archive>
+		        </configuration>
+	      	</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+						</manifest>
+					</archive>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -81,6 +105,10 @@
 			<id>apache-common-io</id>
 			<url>https://mvnrepository.com/artifact/commons-io/commons-io</url>
 		</repository>
+		<repository>
+    		<id>com.teamdev</id>
+		    <url>http://maven.teamdev.com/repository/products</url>
+		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
@@ -88,11 +116,35 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.5</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<dependency>
-		    <groupId>org.apache.httpcomponents</groupId>
-		    <artifactId>httpclient</artifactId>
-		    <version>4.5.3</version>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.3</version>
 		</dependency>
+		<dependency>
+    		<groupId>com.teamdev.jxbrowser</groupId>
+    		<artifactId>jxbrowser-win</artifactId>
+    		<version>6.13</version>
+		</dependency>
+		<dependency>
+    		<groupId>commons-codec</groupId>
+    		<artifactId>commons-codec</artifactId>
+    		<version>1.10</version>
+		</dependency>
+		<!--  <dependency>
+		    <groupId>com.teamdev.jxbrowser</groupId>
+		    <artifactId>jxbrowser-mac</artifactId>
+		    <version>6.13</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.teamdev.jxbrowser</groupId>
+		    <artifactId>jxbrowser-linux32</artifactId>
+		    <version>6.13</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.teamdev.jxbrowser</groupId>
+		    <artifactId>jxbrowser-linux64</artifactId>
+		    <version>6.13</version>
+		</dependency>-->
 	</dependencies>
 </project>
